# strategic-consultation

./: .gitmodules  CHANGELOG.md  README.md  conftest.py  design-principles.md  input-prompt.md  progress.txt  pyproject.toml
.ralph/: README.md  prd.json  preflight.sh  progress.txt  ralph.sh
Meridian-Logistics/: CLAUDE.md  _assumptions.md  _budget.md  _compliance.md  _contradictions.md  _decisions.md  _risks.md  _sources.jsonl
Meridian-Logistics/00-intake/: _trace.jsonl  scope.md
Meridian-Logistics/01-situation/: _trace.jsonl  situation.md
Meridian-Logistics/02-gap/: _trace.jsonl  gaps.md
Meridian-Logistics/03-mapping/: _trace.jsonl  recommendations.md  service-map.md
Meridian-Logistics/04-roadmap/: _trace.jsonl  roadmap.md
Meridian-Logistics/05-handover/: _trace.jsonl  handover.html  handover.md
Meridian-Logistics/06-retro/: _trace.jsonl  retro.md
archive/2026-05-26-strategic-consulting-harness/: prd.json  progress.txt
assets/: handover-template.html
backlog/change-requests/: CR-2026-001.md  CR-2026-002.md  CR-2026-003.md  CR-2026-004.md  CR-2026-005.md  CR-2026-006.md
harness/: charts.py  check_contradictions.py  decay_check.py  enter_phase.py  explain.py  init.py  observability.py
harness/tests/: test_charts.py  (+6 more)
tasks/: prd-handover-pdf-and-cr-resolution.md  prd-strategic-consulting-harness.md
templates/: _claim.schema.md  gaps.template.md  handover.template.md  recommendations.template.md  retro.template.md  roadmap.template.md  scope.template.md  service-map.template.md  situation.template.md
validator/: __init__.py  _util.py  cli.py
(+45 files in other folders)
