[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "strategic-consultation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "weasyprint>=62",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["mcp/"]

[tool.pytest.ini_options]
testpaths = ["harness/tests", "validator/tests", "mcp/portfolio-mcp/tests", "mcp/customer-mcp/tests"]
